curator fix: add a hidden title for the intro section; add overflow to the bonus__list

--- a/css/style.css
+++ b/css/style.css
@@ -1394,17 +1394,18 @@ a {
   padding: 0;
   display: flex;
   flex-direction: column;
-  gap: 16px 0;
+  flex-wrap: wrap;
+  gap: 16px;
 }
 @media (min-width: 960px) {
   .bonus__list {
     flex-direction: row;
-    gap: 0 16px;
+    gap: 16px;
   }
 }
 @media (min-width: 1304px) {
   .bonus__list {
-    gap: 0 20px;
+    gap: 20px;
   }
 }
 @media (min-width: 960px) {
