--- a/scss/blocks/_bonus.scss
+++ b/scss/blocks/_bonus.scss
@@ -42,15 +42,16 @@
     padding: 0;
     display: flex;
     flex-direction: column;
-    gap: 16px 0;
+    flex-wrap: wrap;
+    gap: 16px;
 
     @media (min-width: 960px) {
       flex-direction: row;
-      gap: 0 16px;
+      gap: 16px;
     }
 
     @include vp-1304 {
-      gap: 0 20px;
+      gap: 20px;
     }
   }
 
